--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ div.tocify {
 </div>
 <div id="class-description" class="section level3">
 <h3>Class description</h3>
-<p>This class will explore how concepts of population ecology (e.g., covered in BIOL 314) can be used to inform the conservation and management of natural populations and ecosystems. We will emphasize practical approaches to problem-solving in ecology, conservation, and wildlife management via creative application of population ecology theory using simulation models and statistics. Topics will include population viability analysis (PVA), site-occupancy models, habitat suitability models, metapopulation models, species co-occurrence models, projecting biodiversity response to climate change and more. Laboratory exercises will provide students with hands-on experience with ecological models and their practical applications.</p>
+<p>This class will explore how concepts of population ecology (e.g., covered in BIOL 314) can be used to inform the conservation and management of natural populations and ecosystems. We will emphasize practical approaches to problem-solving in ecology, conservation, and wildlife management via creative application of population ecology theory using simulation models and statistics. Topics will include population viability analysis (PVA), site-occupancy models, habitat suitability models, metapopulation models, species co-occurrence models, projecting population response to climate change and more. Laboratory exercises will provide students with hands-on experience with ecological models and their practical applications in the conservation and management of wild populations.</p>
 </div>
 <div id="learning-outcomes" class="section level3">
 <h3>Learning outcomes</h3>
@@ -383,7 +383,7 @@ div.tocify {
 </li>
 <li>Apply tools such as population viability analysis (PVA), site-occupancy models, and metapopulation models to address the conservation and management of natural populations.<br />
 </li>
-<li>Perform basic statistics, data visualization, simulation modeling and model validation with Excel and the statistical computing language “R”.<br />
+<li>Perform basic statistics, data visualization, simulation modeling and model validation with Excel, the statistical computing language “R”, and the web-based software, InsightMaker.<br />
 </li>
 <li>Critically evaluate the strength of inferences drawn from ecological simulation models using tools such as cross-validation and sensitivity analysis.<br />
 </li>
@@ -395,13 +395,13 @@ div.tocify {
 <div id="grading" class="section level3">
 <h3>Grading:</h3>
 <p>The course grade will be based on the following components:</p>
-<p>Lab exercises (8 total) 25% (80 pts)<br />
-Final group project 25% (80 pts)<br />
-Midterm exam # 1 (date TBD) 12.5% (40 pts)<br />
-Midterm exam # 2 (date TBD) 12.5% (40 pts)<br />
-Final exam (date TBD) 25% (80 pts)<br />
-(Total 320 points)</p>
-<p>NOTE: Graduate students enrolled in 670 will have an additional 50 pts used to calculate their grade (see below) of a total of 370 points. Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82 to 80), C+ (79 to 77), C (76 to 73), C- (72 to 70), D+ (69 to 67), D (66 to 63), D- (62 to 60), F (below 60).</p>
+<p>Lab exercises (8 total) 20% (80 points)<br />
+Quizzes and participation 10% (40 points)<br />
+Group project 25% (100 points)<br />
+Midterm exam # 1 (date TBD) 10% (40 points)<br />
+Midterm exam # 2 (date TBD) 10% (40 points)<br />
+Final exam (16 May, 230pm) 25% (100 points)</p>
+<p>NOTE: Graduate students enrolled in NRES 670 will have an additional 50 pts used to calculate their grade (see below) of a total of 370 points. Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82 to 80), C+ (79 to 77), C (76 to 73), C- (72 to 70), D+ (69 to 67), D (66 to 63), D- (62 to 60), F (below 60).</p>
 </div>
 <div id="exams" class="section level3">
 <h3>Exams:</h3>
@@ -409,7 +409,7 @@ Final exam (date TBD) 25% (80 pts)<br />
 </div>
 <div id="lectures" class="section level3">
 <h3>Lectures</h3>
-<p>Lecture grades will be based primarily on participation and occasional short quizzes. Participation is essential to the learning process, and to our mutual enjoyment of this class. Learning is not a passive process; students are expected to engage with the material in class rather than simply listen and take notes. You should be prepared in class to ask questions, to answer questions posed by other students, and to engage in occasional group problem-solving activities (in class).</p>
+<p>Lecture grades will be based primarily on participation and occasional short quizzes. Participation is essential to the learning process (and to our mutual enjoyment of this class). Learning is not a passive process; students are expected to engage with the material in class rather than simply listen and take notes. You should be prepared in class to ask questions, to answer questions posed by other students, and to engage in frequent problem-solving activities (in class).</p>
 </div>
 <div id="labs" class="section level3">
 <h3>Labs</h3>
