--- a/INTRO.html
+++ b/INTRO.html
@@ -301,6 +301,18 @@ div.tocify {
     </li>
   </ul>
 </li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Labs
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="LAB1.html">Lab 1: exponential growth</a>
+    </li>
+  </ul>
+</li>
 <li>
   <a href="Links.html">Links</a>
 </li>
@@ -332,12 +344,13 @@ div.tocify {
 <div id="syllabus" class="section level2">
 <h2>Syllabus:</h2>
 <p>First let’s take a quick walk through the online syllabus:</p>
-<p><a href="index.html">Go to syllabus</a> <a href="schedule.html">Go to schedule</a></p>
+<p><a href="index.html">Go to syllabus</a><br />
+<a href="schedule.html">Go to schedule</a></p>
 </div>
 <div id="software" class="section level2">
 <h2>Software</h2>
 <p>Skills with specialized software and computer programming is critical in modern-day conservation biology and wildlife management. In this class, you will gain familiarity with using some specialized tools (e.g., <a href="http://www.phidot.org/software/mark/">Program MARK</a>) and some computer programming (e.g., <a href="https://insightmaker.com/">InsightMaker</a>, <a href="https://cran.r-project.org/">R</a>) and I hope by the end of this class you will understand how powerful and useful these tools can be – and not just for population ecology!</p>
-<p>See the <a href="/Links.html">links page</a> for some useful references.</p>
+<p>See the <a href="Links.html">links page</a> for some useful references.</p>
 </div>
 <div id="introductions" class="section level2">
 <h2>Introductions</h2>
@@ -353,7 +366,7 @@ div.tocify {
 <h2>Out-of-class work</h2>
 <p>Much of class time and lab time will be spent on hands-on, in-class exercises. To really make the most of this course, you will need to devote significant time outside of class on:</p>
 <ol style="list-style-type: decimal">
-<li>Studying the assigned readings (see <a href="/schedule.html">the schedule</a>) and online lecture materials</li>
+<li>Studying the assigned readings (see <a href="schedule.html">the schedule</a>) and online lecture materials</li>
 <li>Finishing any problems/exercises you didn’t complete during class or lab</li>
 <li>Working on your final group projects.</li>
 </ol>
@@ -369,6 +382,7 @@ div.tocify {
 <div id="making-up-classes-and-labs" class="section level2">
 <h2>Making up classes and labs</h2>
 <p>Lectures and laboratory exercises will be posted online in enough detail to complete and study on your own time. BUT, much of the benefit of this course will come from interactions with peers and the instructor during class and lab periods and I expect you to be a full participant in this class.</p>
+<p><a href="LECTURE1.html">–go to next lecture–</a></p>
 </div>
 
 
