--- a/LECTURE1.html
+++ b/LECTURE1.html
@@ -302,6 +302,18 @@ div.tocify {
     </li>
   </ul>
 </li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Labs
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="LAB1.html">Lab 1: exponential growth</a>
+    </li>
+  </ul>
+</li>
 <li>
   <a href="Links.html">Links</a>
 </li>
@@ -348,7 +360,7 @@ div.tocify {
 <h2><em>InsightMaker</em>: a modeling framework for systems thinking!</h2>
 <p><a href="insightmaker.com">InsightMaker</a> is a flexible web-based software for defining interacting systems and for modeling the behavior of inter-connected systems.</p>
 <p>Both of the above examples were constructed in InsightMaker.</p>
-<p>We will make extensive use of InsightMaker, both during class and in lab- this will give you a chance to play around with complex systems without needing a background in computer programming!</p>
+<p>We will make extensive use of InsightMaker, both during class and in lab- this will give you a chance to play around with complex and dynamic systems without needing a background in computer programming!</p>
 </div>
 <div id="computer-programming-and-systems-thinking" class="section level2">
 <h2>Computer programming and systems thinking</h2>
@@ -378,6 +390,7 @@ div.tocify {
 </ol>
 <p>Finally, just for fun, here is a cool video of the Lorenz Attractor, which we saw earlier!</p>
 <p><a href="https://www.youtube.com/watch?v=iu4RdmBVdps">Lorenz attractor video!</a></p>
+<p><a href="LECTURE2.html">–go to next lecture–</a></p>
 </div>
 
 
