--- a/LECTURE2.html
+++ b/LECTURE2.html
@@ -302,6 +302,18 @@ div.tocify {
     </li>
   </ul>
 </li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Labs
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="LAB1.html">Lab 1: exponential growth</a>
+    </li>
+  </ul>
+</li>
 <li>
   <a href="Links.html">Links</a>
 </li>
@@ -443,6 +455,7 @@ div.tocify {
 <li>Just like in the last exercise, set the “Show Value Slider” to Yes for all stocks and flows. Now you can play around with the values, re-running the simulation each time. Think about question 1 while doing this (snowball, people, rabbits, fire, bacteria, fleas, savings accounts, cancer). How would you change the values to represent each of these quantities. Pick 2 or more of these and try it out!</li>
 </ol>
 <p>And just for fun, here is a <a href="https://www.youtube.com/watch?v=DZCm2QQZVYk">video</a> about exponential growth you might want to check out..</p>
+<p><a href="LECTURE3.html">–go to next lecture–</a></p>
 </div>
 
 
