--- a/LAB1.html
+++ b/LAB1.html
@@ -23,12 +23,11 @@
 <script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
+<script src="site_libs/navigation-1.1/tabsets.js"></script>
+<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-1.1/highlight.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
-<link rel="stylesheet"
-      href="site_libs/highlight/default.css"
-      type="text/css" />
-<script src="site_libs/highlight/highlight.js"></script>
 <style type="text/css">
   pre:not([class]) {
     background-color: white;
@@ -155,7 +154,6 @@ $(document).ready(function () {
 <div class="container-fluid main-container">
 
 <!-- tabsets -->
-<script src="site_libs/navigation-1.1/tabsets.js"></script>
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
@@ -181,7 +179,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
@@ -240,8 +238,9 @@ div.tocify {
 }
 
 .tocify-subheader .tocify-item {
-  font-size: 0.9em;
-  padding-left: 5px;
+  font-size: 0.90em;
+  padding-left: 25px;
+  text-indent: 0;
 }
 
 .tocify .list-group-item {
@@ -342,43 +341,43 @@ div.tocify {
 <p>First of all, we need a symbol to represent the population size. This is <span class="math inline">\(N\)</span>!</p>
 <p><span class="math inline">\(\Delta N\)</span> represents the change in population size, <span class="math inline">\({N_{t+1}}-{N_t}\)</span></p>
 <p>The famous “BIDE” equation is a way to break down <span class="math inline">\(\Delta N\)</span> into components.</p>
-<p><span class="math inline">\(\Delta N = B + I - D - E\)</span> (Eq. 1)</p>
+<p><span class="math inline">\(\Delta N = B + I - D - E \qquad \text{(Eq. 1)}\)</span></p>
 <p>where <span class="math inline">\(B\)</span> represents the number of births, <span class="math inline">\(I\)</span> reprents the number of immigrants, <span class="math inline">\(D\)</span> represents the number of deaths, and <span class="math inline">\(E\)</span> represents the number of emigrants.</p>
 <p>If we ignore immigration and emigratrion, then the BIDE equation simplifies to:</p>
-<p><span class="math inline">\(\Delta N = B - D\)</span> (Eq. 2)</p>
+<p><span class="math inline">\(\Delta N = B - D \qquad \text{(Eq. 2)}\)</span></p>
 <p>Now let’s focus on <span class="math inline">\(B\)</span> and <span class="math inline">\(D\)</span>. The important thing to recognize is that the number of births and deaths in a population is not constant.</p>
 <p>What does the number of births depend on?</p>
 <p>What <strong>is</strong> more likely to be constant is the per-capita rate of producing offspring, or dying. Does this make sense? These per-capita rates are often expressed as lower case letters. So <span class="math inline">\(b\)</span> represents per-capita births, and <span class="math inline">\(d\)</span> represents per-capita deaths.</p>
-<p><span class="math inline">\(b = \frac {B_t}{N_t}\)</span> (Eq. 3)</p>
+<p><span class="math inline">\(b = \frac {B_t}{N_t} \qquad \text{(Eq. 3)}\)</span></p>
 <p>–or–</p>
 <p><span class="math inline">\(B_t = b \cdot N_t\)</span></p>
 <p>The letter <span class="math inline">\(t\)</span> of course represents time, which could be years, or minutes, or decades, or whatever! So the above equation could be described as follows: “the number of births at a given time is equal to the per-capita birth rate times the total population size at that time”</p>
 <p>Similarly,</p>
-<p><span class="math inline">\(D_t = d \cdot N_t\)</span> (Eq. 4)</p>
+<p><span class="math inline">\(D_t = d \cdot N_t \qquad \text{(Eq. 4)}\)</span></p>
 <p>Okay, we’re almost there.</p>
-<p>If <span class="math inline">\(\Delta N = B - D\)</span> (Eq. 5)</p>
+<p>If <span class="math inline">\(\Delta N = B - D \qquad \text{(Eq. 5)}\)</span></p>
 <p>then</p>
-<p><span class="math inline">\(\Delta N = b \cdot N_t - d \cdot N_t\)</span> (Eq. 6)</p>
+<p><span class="math inline">\(\Delta N = b \cdot N_t - d \cdot N_t\qquad \text{(Eq. 6)}\)</span></p>
 <p>which is equal to</p>
-<p><span class="math inline">\(\Delta N = (b - d) \cdot N_t\)</span> (Eq. 7)</p>
+<p><span class="math inline">\(\Delta N = (b - d) \cdot N_t \qquad \text{(Eq. 7)}\)</span></p>
 <p>which could also be written:</p>
-<p><span class="math inline">\(\Delta N = r \cdot N_t\)</span> (Eq. 8)</p>
+<p><span class="math inline">\(\Delta N = r \cdot N_t\qquad \text{(Eq. 8)}\)</span></p>
 <p>Where <span class="math inline">\(r\)</span> represents the difference between births and deaths. If <span class="math inline">\(r\)</span> is positive, then births are greater than deaths and the population grows. If <span class="math inline">\(r\)</span> is negative then deaths exceed births and the population declines.</p>
 <p>We can use <em>calculus notation</em> to consider the instantaneous change in population size:</p>
-<p><span class="math inline">\(\frac{\partial N}{\partial t} = r \cdot N\)</span> (Eq. 9)</p>
+<p><span class="math inline">\(\frac{\partial N}{\partial t} = r \cdot N \qquad \text{(Eq. 9)}\)</span></p>
 <p>This is probably the most fundamental equation of population ecology.</p>
 <p>If you integrate this equation, you get an equation that describes the population size at any time <span class="math inline">\(t\)</span>:</p>
-<p><span class="math inline">\(N_t = N_0 e^{rt}\)</span> (Eq. 10)</p>
+<p><span class="math inline">\(N_t = N_0 e^{rt} \qquad \text{(Eq. 10)}\)</span></p>
 <p>That is, population size at time <span class="math inline">\(t\)</span> is equal to the population size at time zero (initial abundance) multiplied by the root of the natural logarithm, <span class="math inline">\(e\)</span> to the <span class="math inline">\(rt\)</span> power.</p>
 <p>There you have it! Now you can compute population growth!</p>
 <p>A couple more quick notes:</p>
 <p>The greek symbol lambda (<span class="math inline">\(\lambda\)</span>), is used to represent the finite rate of growth, or <span class="math inline">\(\frac {N_{t+1}}{N_t}\)</span>. Lambda is what you multiply the current population size by to compute the population size in the next time step. Sometimes this is also called “big-R”, or <span class="math inline">\(R\)</span>.</p>
-<p><span class="math inline">\(N_{t+1}=N_t + B - D\)</span> (Eq. 11)</p>
-<p><span class="math inline">\(N_{t+1}=N_t + b \cdot N_t - d \cdot N_t\)</span> (Eq. 12)</p>
-<p><span class="math inline">\(N_{t+1}=N_t + (b - d) \cdot N_t\)</span> (Eq. 13)</p>
-<p><span class="math inline">\(N_{t+1}=N_t + r \cdot N_t\)</span> (Eq. 14)</p>
-<p><span class="math inline">\(N_{t+1}=N_t \cdot (1 + r)\)</span> (Eq. 15)</p>
-<p><span class="math inline">\(N_{t+1}=\lambda \cdot N_t\)</span> (Eq. 16)</p>
+<p><span class="math inline">\(N_{t+1}=N_t + B - D \qquad \text{(Eq. 11)}\)</span></p>
+<p><span class="math inline">\(N_{t+1}=N_t + b \cdot N_t - d \cdot N_t \qquad \text{(Eq. 12)}\)</span></p>
+<p><span class="math inline">\(N_{t+1}=N_t + (b - d) \cdot N_t \qquad \text{(Eq. 13)}\)</span></p>
+<p><span class="math inline">\(N_{t+1}=N_t + r \cdot N_t \qquad \text{(Eq. 14)}\)</span></p>
+<p>$N_{t+1}=N_t (1 + r)  $</p>
+<p><span class="math inline">\(N_{t+1}=\lambda \cdot N_t \qquad \text{(Eq. 16)}\)</span></p>
 <p>Okay now that we got that over with let’s start the lab. The first software we will use is our old friend, Excel!</p>
 </div>
 <div id="exponential-growth-in-excel" class="section level2">
@@ -404,6 +403,86 @@ div.tocify {
 </div>
 <div id="exponential-growth-in-r" class="section level2">
 <h2>Exponential growth in R</h2>
+<p>R is probably the most common software used by modern ecologists for data analysis and simulation. There is a little bit of a learning curve with R, and I think InsightMaker is better in some ways for teaching this class, but I would be remiss if I didn’t introduce you to R. We will do more with R when we get into data analysis!</p>
+<div id="set-up" class="section level3">
+<h3>SET UP</h3>
+<p>Log onto computers using your assigned login and initial password (instructor will provide). Open the R software from the program menu or desktop.</p>
+</div>
+</div>
+<div id="procedure" class="section level2">
+<h2>PROCEDURE</h2>
+<div id="step-i-set-up-r" class="section level3">
+<h3>STEP I: Set up R!</h3>
+<p>Go to website <a href="http://cran.r-project.org/" class="uri">http://cran.r-project.org/</a>. This is the source for the free, public-domain R software and where you can access R packages, find help, access the user community, etc. The instructor will walk you through this website and provide some discussion on the R software program.</p>
+</div>
+<div id="step-ii.-take-some-time-to-get-familiar-with-r" class="section level3">
+<h3>STEP II. Take some time to get familiar with R</h3>
+<p>Take a quick look at the R manual, <a href="http://cran.r-project.org/doc/manuals/R-intro.html">Introduction to R</a>. To jump into the deep end of the pool, try to implement the steps in Appendix A, located <a href="http://cran.r-project.org/doc/manuals/R-intro.html#A-sample-session">here</a>. You might not understand everything right away, but you have the link, so you can return to this!</p>
+<p>If you already have basic R expertise, this is your opportunity to help your peers to develop the level of comfort and familiarity with R that they will need to perform data analysis and programming tasks in this course.</p>
+<p>Depending on whether you are already familiar with R, you may also find the remainder of this document useful as you work your way through the course (and there are many other good introductory R resources available online… let me know if there is one you particularly like and I will add it to the course website (Links page). As you work your way through this tutorial (on your own pace), please ask the instructor or your peers if you are uncertain about anything.</p>
+</div>
+<div id="set-up-the-workspace" class="section level3">
+<h3>Set up the workspace</h3>
+<p>The first thing we usually do when we start an R session is we set up the workspace. That is, we load <strong>packages</strong>, assign key parameters and initialize variables.</p>
+<p>In this case, setting up the workspace is easy. We just need to define our parameter of interest - <span class="math inline">\(r\)</span> -, and set up a <strong>vector</strong> to represent the years of interest.</p>
+<p>We can store data in memory by assigning it to an “object” using the assignment operator <strong>&lt;-</strong>. For example, this would assign the object “x” the value of 5.</p>
+<pre class="r"><code>x &lt;- 5
+x</code></pre>
+<p>Let’s assign our per-capita population growth rate, <span class="math inline">\(r\)</span> (but this could be called anything), and our initial population size to an object called <strong>N0</strong>, and the number of years to simulate.</p>
+<pre class="r"><code>r &lt;- 0.1
+N0 &lt;- 100
+nyears &lt;- 50</code></pre>
+<p>If we want to know what the population size is at the next time step, we can simply multiply N0 by (1+r).</p>
+<pre class="r"><code>N0 * (1+r)</code></pre>
+<pre><code>## [1] 110</code></pre>
+<p>How can we find the population size for the next 50 years? Let’s first make an object that is a vector of years using the <strong>seq()</strong> or “sequence” function.</p>
+<pre class="r"><code>years &lt;- seq(from=0, to=nyears, by=1)
+years</code></pre>
+<pre><code>##  [1]  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22
+## [24] 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
+## [47] 46 47 48 49 50</code></pre>
+<p>Now, let’s build a storage structure to store simulated population size over this time period</p>
+<pre class="r"><code>N &lt;- numeric(nyears+1)    # make an empty storage vector
+N</code></pre>
+<pre><code>##  [1] 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+## [36] 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0</code></pre>
+</div>
+<div id="run-the-simulation" class="section level3">
+<h3>Run the simulation!</h3>
+<p>Then we can use a <strong>for loop</strong> (a very powerful computer programming trick) to automatically generate the population size for each of those years (note the similarity in the equation inside the for loop to Expression 1.15 in Gotelli).</p>
+<pre class="r"><code>N[1] &lt;- N0
+lambda &lt;- 1 + r           # (1 + r) is equal to lambda, the finite rate of growth 
+for (i in 2:(nyears+1)){
+  N[i] &lt;- lambda*N[i-1]
+}
+N</code></pre>
+<pre><code>##  [1]   100.0000   110.0000   121.0000   133.1000   146.4100   161.0510
+##  [7]   177.1561   194.8717   214.3589   235.7948   259.3742   285.3117
+## [13]   313.8428   345.2271   379.7498   417.7248   459.4973   505.4470
+## [19]   555.9917   611.5909   672.7500   740.0250   814.0275   895.4302
+## [25]   984.9733  1083.4706  1191.8177  1310.9994  1442.0994  1586.3093
+## [31]  1744.9402  1919.4342  2111.3777  2322.5154  2554.7670  2810.2437
+## [37]  3091.2681  3400.3949  3740.4343  4114.4778  4525.9256  4978.5181
+## [43]  5476.3699  6024.0069  6626.4076  7289.0484  8017.9532  8819.7485
+## [49]  9701.7234 10671.8957 11739.0853</code></pre>
+</div>
+<div id="plotting" class="section level3">
+<h3>Plotting</h3>
+<p>Let’s plot our population size against time. We only want the first 100 data points in N, so we use <strong>indexing</strong> to specify that. You may have noticed the square brackets inside the for loop…</p>
+<pre class="r"><code>plot(N~years)</code></pre>
+<p><img src="LAB1_files/figure-html/unnamed-chunk-7-1.png" width="672" /></p>
+</div>
+<div id="exercise-2-r-related-problems" class="section level3">
+<h3>Exercise 2 (R-related problems)</h3>
+<p>Please provide short answers to the following questions, and provide your R code to back up your answers.</p>
+<p>Tweak the above code to run for 100 years. Plot your results. What is the final population size?</p>
+<p>Change r to 0.5 and run again for 100 years (and plot the results). What is the final population size now?</p>
+<p>Try to tweak the value of <span class="math inline">\(r\)</span> such that the final population size after 100 years is 1000. What is the value of <span class="math inline">\(r\)</span>? After you solve it by trial and error, can you solve this problem analytically using Eq. 10 above?</p>
+<p>Change the value of <span class="math inline">\(r\)</span> to -0.1. How long until the population goes extinct? Explain your answer.</p>
+</div>
+</div>
+<div id="exponential-growth-in-insightmaker" class="section level2">
+<h2>Exponential growth in InsightMaker</h2>
 </div>
 
 
@@ -416,8 +495,11 @@ div.tocify {
 <script>
 
 // add bootstrap table styles to pandoc tables
-$(document).ready(function () {
+function bootstrapStylePandocTables() {
   $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+}
+$(document).ready(function () {
+  bootstrapStylePandocTables();
 });
 
 
